updated name and file paths

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
             <tr>
                 <td>
                     <div class="Prize"><h5>Prize car</h5></div>
-                    <div class="border1"><img src="/Removed/CometSR.jpg" width="500" title="Comet SR-Sport-Pfister" /></div>                   
+                    <div class="border1"><img src="Removed/CometSR.jpg" width="500" title="Comet SR-Sport-Pfister" /></div>                   
                 </td>
             </tr>
             <tr>
                 <td>
                     <div class="Test"><h5>Test drive</h5></div>
-                    <img src="/Removed/Vacca.jpg" width="500" title="Vacca-Super-Pegassi"/>
+                    <img src="Removed/Vacca.jpg" width="500" title="Vacca-Super-Pegassi"/>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="/Removed/Infernus.jpg" width="500" title="Infernus-Super-Pegassi"/>
+                    <img src="Removed/Infernus.jpg" width="500" title="Infernus-Super-Pegassi"/>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <img src="/Removed/XA-21.jpg" width="500" title="XA-21-Super-Ocelot"/>
+                    <img src="Removed/XA-21.jpg" width="500" title="XA-21-Super-Ocelot"/>
                 </td>
             </tr>
         </table>
@@ -49,19 +49,19 @@
             </tr>
             <tr>
                 <td>
-                    <img src="/Removed/Hermes.jpg" width="500" title="Hermes-Muscle-Albany" />
-                    <img src="/Removed/Hustler.jpg" width="500" title="Hustler-Muscle-Vapid" />
+                    <img src="Removed/Hermes.jpg" width="500" title="Hermes-Muscle-Albany" />
+                    <img src="Removed/Hustler.jpg" width="500" title="Hustler-Muscle-Vapid" />
                 </td>
             </tr>            
             <tr>
                 <td>
-                    <img src="/Removed/Michelli GT.jpg" width="500" title="Michelli GT-Sport Classic-Lambadati" />
-                    <img src="/Removed/Swinger.jpg" width="500" title="Swinger-Sport Classic-Ocelot" />
+                    <img src="Removed/Michelli GT.jpg" width="500" title="Michelli GT-Sport Classic-Lambadati" />
+                    <img src="Removed/Swinger.jpg" width="500" title="Swinger-Sport Classic-Ocelot" />
                 </td>
             </tr>            
             <tr>
                 <td>
-                    <img src="/Removed/JB 700.jpg" width="500" title="JB 700-Sport Classic-Dewbauchee" />
+                    <img src="Removed/JB 700.jpg" width="500" title="JB 700-Sport Classic-Dewbauchee" />
                 </td>
             </tr>
         </table>
@@ -74,8 +74,8 @@
             </tr>
             <tr>
                 <td>
-                    <img src="/Removed/Tigon.jpg" width="500" title="Tigon-Super-Lampadati"/>
-                    <img src="/Removed/Stafford.jpg" width="500" title="Stafford-Sedan-Enus"/>
+                    <img src="Removed/Tigon.jpg" width="500" title="Tigon-Super-Lampadati"/>
+                    <img src="Removed/Stafford.jpg" width="500" title="Stafford-Sedan-Enus"/>
                 </td>
             </tr>
         </table>
